<resources>
    <!--  nome do aplicativo  -->
    <string name="app_name">Céu de Grãos</string>

    <!--  tela login  -->
    <string name="conecte_se">Conecte-se com o email e senha para entrar.</string>
    <string name="campo_email">seuemail@email.com</string>
    <string name="campo_senha">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="esqueci_senha">Esqueci a Senha</string>
    <string name="lembrar_senha">Lembrar a minha senha</string>

    <!-- tela cadastro-->
    <string name="cadastre_se">Crie a sua conta</string>
    <string name="campo_nome">Nome completo/Empresa</string>
    <string name="campo_cpfcnpj">CPF/CNPJ</string>
    <string name="campo_endereco">sua rua, numero</string>
    <string name="lgpd">Termos de Uso e Política de Privacidade</string>

    <!-- tela esqueci senha -->
    <string name="btn_enviar_link">Enviar link de recuperação</string>
    <string name="link_enviado">Link de redefinição enviado para o seu e-mail</string>
    <string name="recuperar_senha">Esqueceu a sua senha?</string>
    <string name="recuperar_senha2">Insira o e-mail associado á sua conta para receber
        o link de recuperação de senha.</string>

    <!-- redefinir a senha -->
    <string name="nova_senha">"Nova senha"</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="crie_senha">Crie uma nova senha</string>

    <!-- termos de uso -->
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="termos_de_uso1">Ao usar o aplicativo Céu de Grãos, você concorda com os seguintes
        termos:</string>
    <string name="termos_de_uso2">Você é responsável por manter a segurança de sua conta e senha.</string>
    <string name="termos_de_uso3">Você concorda em fornecer informações precisas e atualizadas
        ao criar sua conta.</string>
    <string name="termos_de_uso4">Você concorda em usar o aplicativo apenas para fins legítimos
        e não infringir os direitos de terceiros.</string>
    <string name="termos_de_uso5">Você concorda em não tentar acessar informações não autorizadas
        ou prejudicar a segurança do aplicativo.</string>
    <string name="termos_de_uso6">Você concorda em nos informar imediatamente sobre qualquer uso
        não autorizado de sua conta.</string>
    <string name="termos_de_uso7">Reservamo-nos o direito de suspender ou encerrar sua conta se
        violar estes termos de uso.</string>
    <string name="termos_de_uso8">Estes termos de uso estão sujeitos a alterações sem aviso prévio.
        Ao continuar a usar o aplicativo após qualquer alteração, você concorda em ficar vinculado
        aos termos atualizados.</string>

    <!-- política de privacidade -->
    <string name="aviso_de_privacidade">Política de Privacidade</string>
    <string name="aviso_de_privacidade1">O aplicativo Céu de Grãos valoriza e respeita a sua privacidade.
        Esta política de privacidade explica como coletamos, usamos e protegemos as informações que
        você nos fornece ao usar nosso aplicativo.</string>
    <string name="aviso_de_privacidade2">Informações Coletadas:</string>
    <string name="aviso_de_privacidade3">Nome completo ou nome da empresa, Endereço de e-mail, CPF ou CNPJ,
        Endereço completo e Senha</string>
    <string name="aviso_de_privacidade4">Propósito da Coleta de Dados:</string>
    <string name="aviso_de_privacidade5">As informações são coletadas para criar e gerenciar sua conta,
        processar pedidos, fornecer suporte ao cliente e personalizar sua experiência no aplicativo.</string>
    <string name="aviso_de_privacidade6">Uso das Informações:</string>
    <string name="aviso_de_privacidade7">As informações coletadas serão usadas apenas para os fins
        mencionados acima e não serão compartilhadas com terceiros sem o seu consentimento.</string>
    <string name="aviso_de_privacidade8">Segurança das Informações:</string>
    <string name="aviso_de_privacidade9">Implementamos medidas de segurança adequadas para proteger
        suas informações contra acesso não autorizado, alteração, divulgação ou destruição.</string>
    <string name="aviso_de_privacidade10">Ao usar nosso aplicativo, você concorda com a coleta
        e uso de suas informações de acordo com esta política de privacidade.</string>

    <!-- tela de configurações -->
    <string name="detalhes_pedidos">Detalhes do Pedido</string>

</resources>