<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/verde_claro"
    android:padding="16dp"
    tools:context=".FormCadastro">

    <!-- a logotipo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:importantForAccessibility="no" />

    <!-- o quadradinho branco -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="24dp"
        android:elevation="4dp" >

        <!-- mensagem de criar conta -->
        <TextView
            android:id="@+id/criarConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:hint="@string/cadastre_se"
            android:textColorHint="@color/azul_escuro"
            android:textSize="24sp" />

        <!-- para colocar o nome -->
        <EditText
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nome"
            android:padding="12dp"
            android:textColorHint="#34B982"/>

        <!-- para colocar o email -->
        <EditText
            android:id="@+id/campoEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_email"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#34B982"/>

        <!-- para colocar o cpf ou cnpj -->
        <EditText
            android:id="@+id/campoCpfCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_cpfcnpj"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textColorHint="#34B982"/>

        <!-- para colocar o endereço -->
        <EditText
            android:id="@+id/campoEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_endereco"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#34B982"/>

        <!-- para colocar a senha -->
        <EditText
            android:id="@+id/campoSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_senha"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#34B982"/>

        <!-- mensagem lgpd -->
        <TextView
            android:id="@+id/lgpdTermosAvisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lgpd"
            android:textColorHint="#0E4F55"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />

        <!-- botão para realizar o cadastro -->
        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/azul_escuro"
            android:layout_marginTop="20dp"
            android:padding="16dp"/>

        <!-- mensagem para caso o usuário já tenha uma conta -->
        <TextView
            android:id="@+id/acessarConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Já tem uma conta? Acessar conta"
            android:textColor="@color/azul_escuro"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
